currency table overflow fix

--- a/frontend/crypto-test/src/app/currency-table/currency-table.component.sass
+++ b/frontend/crypto-test/src/app/currency-table/currency-table.component.sass
@@ -1,4 +1,9 @@
 
+.table-container
+    margin-top: 10px
+    max-height: 570px
+    overflow: auto
+
 table
     width: 100%
     padding-left: 15%
@@ -10,7 +15,7 @@ table
     white-space: unset !important
     flex: 0 0 35% !important
     width: 35% !important
-    min-width: 70px
+    min-width: 50px
     overflow-wrap: break-word
     word-wrap: break-word
     word-break: break-word
@@ -71,16 +76,14 @@ table
     color: red
 
 .aligned-with-icon
-    position: absolute
     margin-top: 4px
     margin-left: 3px
 
 .money
-    height: 60px
-    min-height: 5px 
-    margin: 8px 
-    width: 50% 
+    min-height: 5px
+    margin: 8px
+    width: 50%
     min-width: 25px
     color: #007fef
-    font-size: 17px 
+    font-size: 17px
     font-weight: 700
